<resources>
    <string name="app_name">Sesam</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="descText">Das alleskönner-box</string>
    <string name="logo_von_sesam">Logo von Sesam</string>
    <string name="login_beschreibung">Tragen Sie hier bitte Ihre Zugangsdaten ein</string>
    <string name="login_beschreibungs_text">Tragen Sie hier bitte Ihre\nZugangsdaten ein</string>
    <string name="anmeldung">Anmeldung</string>
    <string name="e_mail">E-Mail</string>
    <string name="geben_sie_bitte_ihre_e_mail_adresse_ein">Geben Sie bitte Ihre E-Mail Adresse ein</string>
    <string name="passwort">Passworttest</string>
    <string name="anmelden">Anmelden</string>
    <string name="geben_sie_bitte_ihren_password_ein">Geben Sie bitte Ihren Password ein</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!--<string name="title_activity_login">Anmelden</string>-->
    <!-- Strings related to login -->
    <!--<string name="prompt_email">Email</string>-->
    <!--<string name="prompt_password">Password (optional)</string>-->
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <!--<string name="action_sign_in_short">Sign in</string>-->
    <!--<string name="error_invalid_email">This email address is invalid</string>-->
    <!--<string name="error_invalid_password">This password is too short</string>-->
    <!--<string name="error_incorrect_password">This password is incorrect</string>-->
    <!--<string name="error_field_required">This field is required</string>-->
    <!--<string name="permission_rationale">"Contacts permissions are needed for providing email-->
    <!--completions."-->
    <!--</string>-->
</resources>
