<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo_von_sesam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/descText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/descText"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/fillLoginView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/login_beschreibung"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/loginHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descText"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/fillLoginViewText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:gravity="center"
        android:text="@string/login_beschreibungs_text"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/fillLoginView"
        app:layout_constraintEnd_toEndOf="@+id/fillLoginView"
        app:layout_constraintStart_toStartOf="@+id/fillLoginView"
        app:layout_constraintTop_toTopOf="@+id/fillLoginView" />

    <TextView
        android:id="@+id/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/anmeldung"
        android:textSize="@dimen/font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hLine"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/hLine"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginHeader" />

    <EditText
        android:id="@+id/emailEditText"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:text="developer@sesam-global.com"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@+id/hLine"
        app:layout_constraintStart_toStartOf="@+id/hLine" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/passwort"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text="Sesam17!"
        app:layout_constraintBottom_toTopOf="@+id/subscribeButton"
        app:layout_constraintEnd_toEndOf="@+id/hLine"
        app:layout_constraintStart_toStartOf="@+id/hLine" />

    <Button
        android:id="@+id/subscribeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/sesam_blau"
        android:text="@string/anmelden"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>